# actix-qrcode

./: .dockerignore  Cargo.toml  Containerfile  Dockerfile  Dockerfile.alpine  Dockerfile.ubi9  README.md  crb.yaml  k6-actix-local.js  k6.js
.tekton/: pipelinerun.yaml
src/: handlers.rs  main.rs  qr.rs
