[package]
name = "actix-qrcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
fast_qr = { version = "0.6.1", features = ["image"] }
serde = { version = "1.0.149", features = ["derive"] }
