[package]
name = "qrcode-warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio_wasi = { version = "1.25.2", features = ["rt", "macros", "net", "time", "io-util"]}
warp_wasi = "0.3.3"
fast_qr = { version = "0.10.0", features = ["image"] }
serde = { version = "1.0.188", features = ["derive"] }
